# ai-tailor-core

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
Tools/: quality-gate.sh
tailor_core/: __init__.py
tailor_core/context/: __init__.py  loader.py  models.py  store.py
tailor_core/context_files/: __init__.py  extraction.py  models.py  store.py
tailor_core/jd/: __init__.py  deterministic.py  fetcher.py  llm_extractor.py  models.py  parser.py
tailor_core/llm/: __init__.py  client.py
tailor_core/local_projects/: __init__.py  scanner.py
tailor_core/runs/: __init__.py  events.py  models.py  orchestrator.py  store.py
tailor_core/settings/: __init__.py  models.py  store.py
tailor_core/verifier/: __init__.py  deterministic.py  models.py  scaffold.py  vision.py
tests/: test_package.py
tests/fixtures/sample_context/: resume.yaml
tests/fixtures/sample_context/cover_letters/: acme-hiring-manager.md
tests/fixtures/sample_context/git_audit/: acme-platform.md
tests/fixtures/sample_context/projects/: sample-tool.md
tests/fixtures/sample_context/work_history/: 01-acme.md  02-beta.md
tests/unit/context/: conftest.py  test_loader.py  test_models.py  test_store.py
tests/unit/context_files/: test_extraction.py  test_models.py  test_store.py
tests/unit/jd/: test_deterministic.py  test_fetcher.py  test_llm_extractor.py  test_models.py  test_parser.py
tests/unit/llm/: test_client.py
tests/unit/local_projects/: test_scanner.py
tests/unit/runs/: _stub_tailored.py  test_events.py  test_models.py  test_orchestrator.py  test_store.py
tests/unit/settings/: test_store.py
tests/unit/verifier/: test_deterministic.py  test_models.py  test_scaffold.py  test_vision.py
