[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-tailor-core"
version = "0.1.0"
description = "Shared building blocks for AI-driven tailoring pipelines (LLM client, JD ingest, run orchestration, verifier, user-context loader). Consumed by resumeai and coverletterai."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Jonathan Duketis" }]
requires-python = ">=3.12"
keywords = ["ai", "agent", "claude", "anthropic", "tailoring", "resume", "cover-letter"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "httpx[http2]>=0.27,<1.0",
  "selectolax>=0.3.21",
  "pydantic>=2.5,<3.0",
  "pydantic-settings>=2.1,<3.0",
  "structlog>=24.1",
  "sqlalchemy>=2.0,<3.0",
  "pyyaml>=6.0",
  "pypdf>=4.0",
  "pypdfium2>=4.30",
  "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "pytest-mock>=3.12",
  "respx>=0.20",
  "mypy>=1.8",
  "ruff>=0.3",
  "types-pyyaml",
  "pre-commit>=3.6",
]

[project.urls]
Repository = "https://github.com/duketis/ai-tailor-core"
Issues = "https://github.com/duketis/ai-tailor-core/issues"

[tool.setuptools.packages.find]
include = ["tailor_core*"]
exclude = ["tests*", "_private*"]

[tool.setuptools.package-data]
tailor_core = ["py.typed"]
"tailor_core.docker" = ["*.dockerfile", "*.yml", "*.yaml", "Dockerfile*", "*.template"]

# ---------------------------------------------------------------------------
# Ruff - lint and format
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["_private", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "N",      # pep8-naming
  "UP",     # pyupgrade
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "S",      # flake8-bandit
  "BLE",    # flake8-blind-except
  "RET",    # flake8-return
  "SIM",    # flake8-simplify
  "PTH",    # flake8-use-pathlib
  "PL",     # pylint
  "TRY",    # tryceratops
  "ASYNC",  # flake8-async
  "RUF",    # ruff-specific
]
ignore = [
  "PLR0913",  # too many args (sometimes intentional)
  "TRY003",   # long exception messages
  "PLR2004",  # magic numbers (handled per-file in tests)
  # En-dash/em-dash unicode chars are intentional in prose and in
  # parsed JD / resume text that comes from real-world sources.
  "RUF001",
  "RUF002",
  "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",
  "PLR2004",
  "ANN",
  "PLR0915",
  "S105",
  "S106",
  "S107",
  "S607",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy - strict static typing
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
ignore_missing_imports = false
show_error_codes = true
pretty = true
files = ["tailor_core", "tests"]
exclude = ["_private/", "build/", "dist/"]

[[tool.mypy.overrides]]
module = ["pypdfium2", "pypdfium2.*", "anthropic", "anthropic.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest - testing
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
]
markers = [
  "slow: marks tests as slow (deselect with -m 'not slow')",
  "integration: integration tests (may touch network or filesystem)",
]
filterwarnings = [
  "error",
  "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["tailor_core"]
branch = true
omit = ["*/__main__.py"]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_also = [
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "@overload",
]
